# chrome-for-testing-manager

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md
src/: cache.rs  chromedriver.rs  download.rs  error.rs  lib.rs  mgr.rs  output.rs  port.rs  session.rs  session_builder.rs  version.rs
tests/: current_thread_runtime.rs  custom_graceful_shutdown.rs  custom_termination.rs  custom_termination_with_timeouts.rs  headless_shell_session.rs  multiple_sessions.rs  single_session.rs  single_session_non_headless.rs  test.rs
tests/common/: wikipedia.rs
