[package]
name = "chrome-for-testing-manager"
version = "0.8.0"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/lpotthast/chrome-for-testing-manager"
description = """
Programmatic management of chrome-for-testing installations.
"""
categories = ["web-programming", "development-tools::testing"]
keywords = ["chrome", "chromedriver", "webdriver", "selenium", "browser-testing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
exclude = [
    ".claude",
    ".idea",
    ".vscode",
    "AGENTS.md",
    "CLAUDE.md",
    "Justfile",
]

[features]
thirtyfour = ["dep:thirtyfour"]

[dependencies]
chrome-for-testing = "0.4.0"
directories = "6.0.0"
futures = "0.3.0"
reqwest = "0.13.2"
rootcause = "0.12.1"
thirtyfour = { version = "0.36.1", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "process", "time"] }
tokio-process-tools = "0.8.1"
tracing = "0.1.41"
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assertr = "0.5.0"
chrome-for-testing-manager = { path = ".", features = ["thirtyfour"] }
# ^.. This is a way to say: Please enable the "thirtyfour" feature for all tests.
ctor = "0.10.0"
serial_test = "3.4.0"
tokio = { version = "1.51.1", features = ["macros"] }
tracing-subscriber = "0.3.23"
